# cg

./: CMakeLists.txt  README.md
include/: circle.h  color.h  coordinate.h  curve.h  cut.h  dda.h  display.h  draw.h  ellipse.h  file.h  fill.h  keyboard.h  line.h  menu.h  mouse.h  shape.h  window.h
src/: circle.cpp  color.cpp  coordinate.cpp  curve.cpp  cut.cpp  dda.cpp  display.cpp  draw.cpp  ellipse.cpp  file.cpp  fill.cpp  keyboard.cpp  line.cpp  main.cpp  menu.cpp  mouse.cpp  shape.cpp  window.cpp
